--- a/views/rdc.html
+++ b/views/rdc.html
@@ -77,12 +77,22 @@
         </aside>
 
         <section id="course-details">
-            <div id="course-header">
-                <span class="material-icons-sharp">arrow_back</span>
+            <div class="course-header">
+                <span class="material-icons-sharp">arrow_back</span> <!--ADICIONAR JAVASCRIPT-->
                 <h2>Curso</h2>
                 <h1>Redes de Computadores</h1>
             </div>
             <div class="external-card-container">
+                <div class="external-card">
+                    <div class="card-icon">
+                        <span class="material-icons-sharp">videocam</span>
+                    </div>
+                    <div class="card-content">
+                        <h5>ACESSAR</h5>
+                        <h4>Google Meet</h4>
+                    </div>
+                </div>
+
                 <div class="external-card">
                     <div class="card-icon">
                         <span class="material-icons-sharp">book</span>
@@ -99,34 +109,24 @@
                     </div>
                     <div class="card-content">
                         <h5>ACESSAR</h5>
-                        <h4>Portal</h4>
-                    </div>
-                </div>
-
-                <div class="external-card">
-                    <div class="card-icon">
-                        <span class="material-icons-sharp">local_library</span>
-                    </div>
-                    <div class="card-content">
-                        <h5>ACESSAR</h5>
-                        <h4>Biblioteca</h4>
+                        <h4>Portal do Aluno</h4>
                     </div>
                 </div>
 
                 
                 <div class="external-card">
                     <div class="card-icon">
-                        <span class="material-icons-sharp">mail_outline</span>
+                        <span class="material-icons-sharp">attach_file</span>
                     </div>
                     <div class="card-content">
                         <h5>ACESSAR</h5>
-                        <h4>Email - IFB</h4>
+                        <h4>Plano de Curso</h4>
                     </div>
                 </div>
             </div>
             </div>
 
-            <section id="center">
+            <section id="course-classes">
                 <div class="class-table-container">
                     <table>
                         <thead>
@@ -140,17 +140,71 @@
                         <tbody>
                             <tr>
                                 <td>
+                                    <h5>Capítulo 11 - Criação de uma rede pequena</h5>
+                                </td>
+                                <td>
+                                    <h5>Assíncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>17/01/22</h5>
+                                </td>
+                                <td class="class-attendance">
+                                    <span class="material-icons-sharp complete">check_circle</span>
+                                    <h5>Presente</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h5>Capítulo 10 - Camada de Aplicação</h5>
+                                </td>
+                                <td>
+                                    <h5>Assíncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>10/01/22</h5>
+                                </td>
+                                <td class="class-attendance">
+                                    <span class="material-icons-sharp complete">check_circle</span>
+                                    <h5>Presente</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <h5>Capítulo 9 - Camada de Transporte</h5>
+                                </td>
+                                <td>
+                                    <h5>Assíncrona</h5>
+                                </td>
+                                <td>    
+                                    <h5>08/01/22</h5>
+                                </td>
+                                <td class="class-attendance">
+                                    <span class="material-icons-sharp noattendance">cancel</span>
+                                    <h5 class="icon-center">Falta</h5>
+                                </td>
+                            </tr>
+                        </tbody>
+
+                        <tbody>
+                            <tr>
+                                <td>
                                     <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>06/02/22</h5>
+                                    <h5>20/12/21</h5>
                                 </td>
-                                <td class="task-delivery">
-                                    <span class="material-icons-sharp complete">check_circle</span>
-                                    <h5>Presente</h5>
+                                <td class="class-attendance">
+                                    <span class="material-icons-sharp noattendance">cancel</span>
+                                    <h5 class="icon-center">Falta</h5>
                                 </td>
                             </tr>
                         </tbody>
@@ -158,17 +212,17 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                    <h5>Capítulo 7 - Endereçamento IP</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>06/02/22</h5>
+                                    <h5>06/12/21</h5>
                                 </td>
-                                <td class="task-delivery">
-                                    <span class="material-icons-sharp complete">check_circle</span>
-                                    <h5>Presente</h5>
+                                <td class="class-attendance">
+                                    <span class="material-icons-sharp noattendance">cancel</span>
+                                    <h5 class="icon-center">Falta</h5>
                                 </td>
                             </tr>
                         </tbody>
@@ -176,15 +230,15 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                    <h5>Capítulo 6 - Camada de Rede</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>06/02/22</h5>
+                                    <h5>29/11/22</h5>
                                 </td>
-                                <td class="task-delivery">
+                                <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
                                     <h5>Presente</h5>
                                 </td>
@@ -194,15 +248,15 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                    <h5>Capítulo 5 - Protocolo Ethernet</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>06/02/22</h5>
+                                    <h5>13/11/21</h5>
                                 </td>
-                                <td class="task-delivery">
+                                <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
                                     <h5>Presente</h5>
                                 </td>
@@ -212,15 +266,15 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                    <h5>Capítulo 4 - Camada de Acesso à Rede</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>06/02/22</h5>
+                                    <h5>25/10/21</h5>
                                 </td>
-                                <td class="task-delivery">
+                                <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
                                     <h5>Presente</h5>
                                 </td>
@@ -230,15 +284,15 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                    <h5>Capítulo 3 - Comunicação e Protocolos de Rede</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>06/02/22</h5>
+                                    <h5>11/10/21</h5>
                                 </td>
-                                <td class="task-delivery">
+                                <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
                                     <h5>Presente</h5>
                                 </td>
@@ -248,15 +302,15 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                    <h5>Capítulo 2 - Configurando o Sistema Operacional de Rede</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>06/02/22</h5>
+                                    <h5>09/10/21</h5>
                                 </td>
-                                <td class="task-delivery">
+                                <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
                                     <h5>Presente</h5>
                                 </td>
@@ -266,15 +320,15 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Capítulo 8 - Divisão de Rede IP em Sub-redes</h5>
+                                    <h5>Capítulo 1 - Explore a Rede</h5>
                                 </td>
                                 <td>
                                     <h5>Assíncrona</h5>
                                 </td>
                                 <td>    
-                                    <h5>06/02/22</h5>
+                                    <h5>04/10/22</h5>
                                 </td>
-                                <td class="task-delivery">
+                                <td class="class-attendance">
                                     <span class="material-icons-sharp complete">check_circle</span>
                                     <h5>Presente</h5>
                                 </td>
@@ -291,20 +345,28 @@
                         <div class="next-tasks-content">
                             <h5>20 de Dezembro</h5>
                             <h4>Exame dos Módulos 8-10</h4>
-                            <span id="task-color">Atividade</span>
+                            <span class="task-type">Atividade</span>
                         </div>
                         <div class="next-tasks-content">
-                            <h5>20 de Dezembro</h5>
-                            <h4>Exame dos Módulos 8-10</h4>
-                            <span id="task-color">Atividade</span>
+                            <h5>17 de Janeiro</h5>
+                            <h4>Exame dos Módulos 14-15</h4>
+                            <span class="task-type">Atividade</span>
                         </div>
                         <div class="next-tasks-content">
-                            <h5>20 de Dezembro</h5>
-                            <h4>Exame dos Módulos 8-10</h4>
-                            <span id="task-color">Atividade</span>
+                            <h5>31 de Janeiro</h5>
+                            <h4>Exame Final de Redes</h4>
+                            <span class="task-type test">Prova</span>
                         </div>
                     </div>
+                    <div class="task-view-button">
+                        <a href="atividades.html">Ver todas</a>
+                    </div>
                 </div>
+                <footer>
+                    <a href="https://github.com/GeovaniSS">
+                        <p>&copy;2022 - Desenvolvido por Geovani Silva</p>
+                    </a>
+                </footer>
             </section>
         </section>
     </main>
