--- a/styles/rdc-style.css
+++ b/styles/rdc-style.css
@@ -23,6 +23,7 @@ main section#course-details .course-header {
 }
 
 .course-header span {
+    cursor: pointer;
     margin-bottom: 10px;
     border: 3px solid #fff;
     border-radius: 50px;
