--- a/views/rdc.html
+++ b/views/rdc.html
@@ -372,5 +372,6 @@
     </main>
 
     <script src="../scripts/menu.js"></script>
+    <script src="../scripts/courses.js"></script>
 </body>
 </html>
